<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.android.undlocalbusiness.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/business_image"
                style="@style/business_image_header"
                android:src="@drawable/local_buisness" />

            <TextView
                style="@style/business_name_header_text"
                android:text="@string/business_name_header" />
        </RelativeLayout>

        <TextView
            style="@style/category_title_text"
            android:text="@string/category_hours_of_operation_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/days_part_one"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timings_part_one" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/days_part_two" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timings_part_two" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/category_title_text"
            android:text="@string/category_address_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/address" />

        <TextView
            style="@style/category_title_text"
            android:text="@string/category_contact_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/phone_number" />

        <TextView
            style="@style/category_title_text"
            android:text="@string/category_follow_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                style="@style/follow_us_image_style"
                android:src="@drawable/ic_instagram_black_36dp" />

            <ImageView
                style="@style/follow_us_image_style"
                android:src="@drawable/ic_facebook_box_black_36dp" />

            <Button
                style="@style/follow_us_button_style"
                android:text="@string/facebook_messenger_id" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>